pushpop.css
* {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-text-size-adjust: none;
  -webkit-touch-callout: none;
  -webkit-user-drag: none;
}

html {
  background: #000;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 100%;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
  -webkit-text-size-adjust: 100%;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -o-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

body {
  background: #000;
  margin: 0;
  padding: 0;
  font-size: 13px;
  line-height: 1.25em;
}

.pp-view {
  background-color: #ddd;
  display: none;
  position: absolute;
  width: auto;
  height: auto;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -ms-backface-visibility: hidden;
  -o-backface-visibility: hidden;
  backface-visibility: hidden;
}

.pp-view.active, .pp-view.push, .pp-view.pop {
  display: block;
}

div.pp-navigationbar-buttons {
  display: none;
}

.pp-view-stack {
  background: #333 url('background.png');
  position: absolute;
  height: auto;
  width: 100%;
  top: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  overflow: hidden;
  -webkit-perspective: 2000px;
  -moz-perspective: 2000px;
  -ms-perspective: 2000px;
  -o-perspective: 2000px;
  perspective: 2000px;
}

/* NOTE: Use of .topbar has been removed in Bootstrap 2.x. */
.navbar ~ .pp-view-stack, .topbar ~ .pp-view-stack { top: 40px; }

/**
  Pushpop.Button
  ==============
  pp-button
*/
.pp-button {
  background: #8da3c0; /* Old browsers */
  background: -moz-linear-gradient(top,  #8da3c0 0%, #5877a2 50%, #476999 51%, #496b9a 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#8da3c0), color-stop(50%,#5877a2), color-stop(51%,#476999), color-stop(100%,#496b9a)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #8da3c0 0%,#5877a2 50%,#476999 51%,#496b9a 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #8da3c0 0%,#5877a2 50%,#476999 51%,#496b9a 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  #8da3c0 0%,#5877a2 50%,#476999 51%,#496b9a 100%); /* IE10+ */
  background: linear-gradient(top,  #8da3c0 0%,#5877a2 50%,#476999 51%,#496b9a 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8da3c0', endColorstr='#496b9a',GradientType=0 ); /* IE6-9 */
	border: 1px solid rgba(0, 0, 0, 0.5);
	color: #fff;
	cursor: pointer;
	display: inline-block;
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 0.9em;
	font-weight: bold;
	line-height: 1.4em;
	padding: 0.55em 0.9em 0.5em;
	margin: 0.5em;
	min-width: 2.5em;
	opacity: 1;
	outline: none;
	text-align: center;
	text-decoration: none;
	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
	zoom: 1; /* Trigger "hasLayout" in IE */
	-webkit-border-radius: 0.5em;
	-moz-border-radius: 0.5em;
	border-radius: 0.5em;
	-webkit-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.3), inset 0 1px 0 0 rgba(0, 0, 0, 0.1);
  -moz-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.3), inset 0 1px 0 0 rgba(0, 0, 0, 0.1);
  box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.3), inset 0 1px 0 0 rgba(0, 0, 0, 0.1);
	-webkit-transition: opacity 0.2s ease;
	-moz-transition: opacity 0.2s ease;
	-ms-transition: opacity 0.2s ease;
	-o-transition: opacity 0.2s ease;
	transition: opacity 0.2s ease;
}

.pp-button:hover {
  text-decoration: none;
}

.pp-button:active {
  background: #7c87a4; /* Old browsers */
  background: -moz-linear-gradient(top,  #7c87a4 0%, #3a4e78 50%, #253c6a 51%, #263e6c 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7c87a4), color-stop(50%,#3a4e78), color-stop(51%,#253c6a), color-stop(100%,#263e6c)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #7c87a4 0%,#3a4e78 50%,#253c6a 51%,#263e6c 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #7c87a4 0%,#3a4e78 50%,#253c6a 51%,#263e6c 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  #7c87a4 0%,#3a4e78 50%,#253c6a 51%,#263e6c 100%); /* IE10+ */
  background: linear-gradient(top,  #7c87a4 0%,#3a4e78 50%,#253c6a 51%,#263e6c 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7c87a4', endColorstr='#263e6c',GradientType=0 ); /* IE6-9 */
}

.pp-button + .pp-button { margin-left: 0; } /* Correct the spacing between consecutive buttons. */

.pp-button-style-black {
  background: #2d2d2d; /* Old browsers */
  background: -moz-linear-gradient(top,  #7e7e7e 0%, #404040 50%, #2d2d2d 51%, #272727 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7e7e7e), color-stop(50%,#404040), color-stop(51%,#2d2d2d), color-stop(100%,#272727)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #7e7e7e 0%,#404040 50%,#2d2d2d 51%,#272727 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #7e7e7e 0%,#404040 50%,#2d2d2d 51%,#272727 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  #7e7e7e 0%,#404040 50%,#2d2d2d 51%,#272727 100%); /* IE10+ */
  background: linear-gradient(top,  #7e7e7e 0%,#404040 50%,#2d2d2d 51%,#272727 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7e7e7e', endColorstr='#272727',GradientType=0 ); /* IE6-9 */
}
/* ... */

